templates/service.external.grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api
spec:
  type: ExternalName
  externalName: grafana.lgtm.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
