templates/service.external.portfolio-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api
spec:
  type: ExternalName
  externalName: portfolio-api.website.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
