templates/service.external.website.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: ExternalName
  externalName: hello-world.website.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
